test/files/invalid/struct_with_complex_types.stderr
error: Only simple types are permitted in structs
  ┌─ test/files/invalid/struct_with_complex_types.fbs:2:7
  │
2 │   x0: string;
  │       ^^^^^^ Strings in structs are not supported

error: Only simple types are permitted in structs
  ┌─ test/files/invalid/struct_with_complex_types.fbs:3:7
  │
3 │   x1: Bar;
  │       ^^^ Tables in structs are not supported

error: Only simple types are permitted in structs
  ┌─ test/files/invalid/struct_with_complex_types.fbs:4:7
  │
4 │   x2: Baz;
  │       ^^^ Unions in structs are not supported

error: Only simple types are permitted in structs
  ┌─ test/files/invalid/struct_with_complex_types.fbs:5:7
  │
5 │   x3: [bool];
  │       ^^^^^^ Vectors in structs are not supported

error: Arrays are not currently supported in planus
  ┌─ test/files/invalid/struct_with_complex_types.fbs:6:7
  │
6 │   x4: [bool: 4];
  │       ^^^^^^^^^

Error: Bailing because of errors
